@@ -20,6 +20,7 @@
   <div metal:fill-slot="content">
 
     <div metal:use-macro="api.snippets.macros['status_message']"/>
+    <div metal:use-macro="api.snippets.macros['error_message']"/>
 
     <h1 class="kscreentitle">${form_title}</h1>
 
